Bug 507228 - Items are displayed by name instead of by size on network shares
Summary: Items are displayed by name instead of by size on network shares
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.3
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-19 12:05 UTC by sandyforrest001
Modified: 2025-07-22 12:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Used on an SMB share, displays the incorrect behaviour listed (95.66 KB, image/png)
2025-07-19 12:05 UTC, sandyforrest001
Details
Used on a local drive, displays the correct and intended behaviour (147.15 KB, image/png)
2025-07-19 12:05 UTC, sandyforrest001
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sandyforrest001 2025-07-19 12:05:04 UTC
Created attachment 183336 [details]
Used on an SMB share, displays the incorrect behaviour listed

SUMMARY


STEPS TO REPRODUCE
(tested on both SMB and SFTP shares, the result is the same)
1. Either open Filelight and navigate to any SMB/SFTP folder, or navigate there in Dolphin and open Disk Usage Statistics
2. Let Filelight index the folder
3. Observe that the contents are indexed by ascending alphabetical order instead of the expected/intended descending size order

OBSERVED RESULT
Files and folders are sorted in ascending alphabetical order in both the detailed left panel and main graphical view

EXPECTED RESULT
Files and folders should be listed in descending size order in both detail and graphical view

SOFTWARE/OS VERSIONS
Filelight 25.04.3
Fedora Linux 42
Linux Kernel 6.15.5-200.fc42
KDE Plasma 6.4.2
KDE Frameworks 6.16.0
Qt 6.9.1
Comment 1 sandyforrest001 2025-07-19 12:05:54 UTC
Created attachment 183337 [details]
Used on a local drive, displays the correct and intended behaviour
Comment 2 Harald Sitter 2025-07-19 23:17:51 UTC
What am I looking for in your screenshots?
Comment 3 sandyforrest001 2025-07-20 11:00:18 UTC
(In reply to Harald Sitter from comment #2)
> What am I looking for in your screenshots?

183337 (in the separate comment) is showing a folder on my internal drive, going anticlockwise from the right is the largest subfolder (in red), followed by progressively smaller ones in green, cyan, blue, etc before the 'misc small files' in dark purple. With the angle of the segment representing actual file/folder size, this is what I would expect (sorted in size order).

183336 (in the original post) is from running Filelight on an SMB share. Instead of the first element on the right (in red) being largest, it's yellow, orange, blue, red, purple and not in size order on the chart itself.
There's no setting to change the sort order and, considering its purpose as a disk usage analyser, I would assume the intended behaviour would be to show the contents in order of size hence my thinking this is unintended.

I realise by cropping out the details view it doesn't show that those folders are instead sorted in alphabetical order, so if it would be helpful for me to also show the details panel on the left I'll happily do that.
Comment 4 Bug Janitor Service 2025-07-21 04:37:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/filelight/-/merge_requests/187
Comment 5 Harald Sitter 2025-07-22 12:30:43 UTC
Git commit 73d3def2709e600683976a95ef7929703d33e895 by Harald Sitter.
Committed on 22/07/2025 at 12:24.
Pushed by sitter into branch 'master'.

remotelister: sort folder before emitting it

M  +4    -0    src/remoteLister.cpp

https://invent.kde.org/utilities/filelight/-/commit/73d3def2709e600683976a95ef7929703d33e895
Comment 6 Harald Sitter 2025-07-22 12:34:51 UTC
Git commit 29119db143e1b405b87951eb897f53dfada8d9c0 by Harald Sitter.
Committed on 22/07/2025 at 12:30.
Pushed by sitter into branch 'release/25.08'.

remotelister: sort folder before emitting it


(cherry picked from commit 73d3def2709e600683976a95ef7929703d33e895)

Co-authored-by: Harald Sitter <sitter@kde.org>

M  +4    -0    src/remoteLister.cpp

https://invent.kde.org/utilities/filelight/-/commit/29119db143e1b405b87951eb897f53dfada8d9c0