remotelister: sort folder before emitting it

BUG: 507228


(cherry picked from commit 73d3def2709e600683976a95ef7929703d33e895)

Co-authored-by: Harald Sitter <sitter@kde.org>